AD-2004-01-24-0: Bugfix:    Did remove unused parameter from 'sge_do_log()'
                            signature.
                 Changed:   uti

MD-2004-01-24-0: Enhancem.: - Add auto uninstall function for execd
                            - Some documentation
                 Changed:   sge_config, sge.conf, sge_config_execd_uninst.sh

MD-2004-01-23-0: Enhancem.: - Added new installation script (sge_config)
                             
                 Changed:   all installation files, create_settings.sh,
                            distinst, rcp_startup_template
                 Review:    pending (AS)

EB-2004-01-23-0: Bugfix:    qmaster core in cqueue_list_locate_qinstance()

AD-2004-01-23-0: Enhancem.: Add error message in case a mutex lock/unlock
                            does fail.
                 Changed:   lck

AD-2004-01-22-0: Bugfix:    'qconf -km' did not work for the 'LinuxThreads'
                            library (NPTL did work).
                 Changed:   qmaster

CR-2004-01-22-0: Bugfix:    - execd did not signal job
                            - switched of communication log (as default)
                              communication log can be activated with
                              SGE_NGC_DEBUG variable
                 Changed:   execd

SG-2004-01-22-3: Bugfix:    fixed the counting for running jobs in the qevent
                            client.
                 Changed:   qevent
                 Review:    CR

SG-2004-01-22-2: Enhancem.: updated man page for qmod
                 Changed:   man1/qmod.1

SG-2004-01-22-1: Bugfix:    Removed the renaming of users via qconf. It never
                            worked and should not have been part of qconf.
                 Changed:   qconf
                 Issue:     646

SG-2004-01-22-0: Enhancem.: 2. part of the qmod adaption
                 Changed:   qmod, qmaster

EB-2004-01-22-0: Bugfix:    CQ related bugfixes
                            - changed defaults auf CQ template